--- a/personal/templates/base.html
+++ b/personal/templates/base.html
@@ -74,7 +74,7 @@
                                                 href="https://webmail7.deu.edu.tr/" target="_blank"></a><a
                                                 href="{% url 'personal:mesaj' %}">MESAJLAR</a>
                                         </li>
-                                        <li><a href="{% url 'personal:anket' %">ANKETLER</a>
+                                        <li><a href="{% url 'personal:anket' %}">ANKETLER</a>
                                         </li>
                                         <!--  <li><a href="http://web.deu.edu.tr/sss/" target="_blank">SIKÇA SORULAN SORULAR</a></li>  -->
                                         <li class="dir">SIKÇA SORULAN SORULAR
