--- a/personal/templates/not.html
+++ b/personal/templates/not.html
@@ -403,113 +403,7 @@
 		</table>
 		<br>
 	</div>
-	<table cellspacing="0" cellpadding="0" width="100%" align="center" bgcolor="#0066cc" border="0">
-		<tbody>
-			<tr>
-				<td class="header" valign="bottom" align="middle" height="40">
-					<div align="center">
-						<table border="0" cellspacing="0" cellpadding="0" style="height:40px;">
-							<tbody>
-								<tr align="center">
-									<td align="center">
-										<ul id="nav" class="dropdown dropdown-linear" style="z-index:0;">
-											<li style="background-color:#0066cc; cursor:auto;">&nbsp;</li>
-											<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-												debis.php";"=""><a
-													href="https://debis.deu.edu.tr/debis.php">ANASAYFA</a></li>
-											<li class="dir" style="color:yellow;">KISISEL ISLEMLERIM
-												<ul>
-
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" dersprogrami="" index.php";"=""><a
-															href="https://debis.deu.edu.tr/OgrenciIsleri/Ogrenci/DersProgrami/index.php">Ders
-															programım</a></li>
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""><a
-															href="https://debis.deu.edu.tr/OgrenciIsleri/Ogrenci/OgrenciNotu/index.php">Not
-															görme ekranı</a></li>
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""><a
-															href="https://debis.deu.edu.tr/OgrenciIsleri/Ogrenci/ydy_not/index.php"><b>YDY</b>
-															Not görme ekranı</a></li>
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""><a
-															href="https://debis.deu.edu.tr/OgrenciIsleri/Ogrenci/ydy_devamsizlik/index.php"><b>YDY</b>
-															Ögrenci Devamsızlık Bilgileri</a></li>
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" transcript="" index.php";"=""><a
-															href="https://debis.deu.edu.tr/OgrenciIsleri/Ogrenci/transcript/index.php">Not
-															döküm belgesi</a></li>
-													<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-														ogrenciisleri="" ogrenci="" transcript="" index.php";"=""><a
-															href="http://akillikart.deu.edu.tr/yurt/yurtBasvuru/index.php">Yurt
-															Basvurusu</a></li>
-
-													<li onclick="window.location.href=" https:=""
-														mezun.deu.edu.tr="" "="" target=" \&quot;_blank\&quot;">
-														<a href="https://mezun.deu.edu.tr/"
-															target="\&quot;_blank\&quot;">Mezun Bilgi Formu</a></li>
-
-													<li onclick="window.location.href=" https:=""
-														debishs.deu.edu.tr="" "="" target=" \&quot;_blank\&quot;"><a
-															href="https://debishs.deu.edu.tr/"
-															target="\&quot;_blank\&quot;">Sifre degistirme</a></li>
-
-												</ul>
-											</li>
-											<li>OGRENCI E-POSTA
-												<ul>
-													<li><a href="http://webmail.deu.edu.tr/ogrmail/src/login.php"
-															target="_blank">Klasik WebMail</a></li>
-													<li><a href="https://webmail7.deu.edu.tr/" target="_blank">Yeni
-															WebMail</a></li><a href="https://webmail7.deu.edu.tr/"
-														target="_blank">
-													</a>
-												</ul><a href="https://webmail7.deu.edu.tr/" target="_blank">
-												</a></li><a href="https://webmail7.deu.edu.tr/" target="_blank">
-
-											</a>
-											<li
-												onclick="window.location.href=&#39;../../../DEUWeb/mesaj/index.php&#39;;">
-												<a href="https://webmail7.deu.edu.tr/" target="_blank"></a><a
-													href="https://debis.deu.edu.tr/DEUWeb/mesaj/index.php">MESAJLAR</a>
-											</li>
-											<li><a href="https://debis.deu.edu.tr/DEUWeb/Anket/index.php">ANKETLER</a>
-											</li>
-											<!--  <li><a href="http://web.deu.edu.tr/sss/" target="_blank">SIKÇA SORULAN SORULAR</a></li>  -->
-											<li class="dir">SIKÇA SORULAN SORULAR
-												<ul>
-													<li><a href="http://eduroam.deu.edu.tr/" target="_blank">Kablosuz ag
-															hizmetinden nasıl faydalanabilirim?</a></li>
-													<li><a href="http://web.deu.edu.tr/sss/posta.html"
-															target="_blank">Dokuz Eylül Universitesi E-Posta kullanım
-															kılavuzu</a></li>
-													<li><a href="http://web.deu.edu.tr/sss/spam.html"
-															target="_blank">Spam posta nedir?</a></li>
-													<li><a href="http://web.deu.edu.tr/sss/proxy_ogrenci.html"
-															target="_blank">Kütüphane veritabanlarına erisim-proxy
-															ayarları nasıl yapılır? (Ögrenci için)</a></li>
-													<li><a href="http://web.deu.edu.tr/sss/proxy.html"
-															target="_blank">Kütüphane veritabanlarına erisim-proxy
-															ayarları nasıl yapılır? (Personel için)</a></li>
-													<!--<li>Kayıp Parola islemleri</li>-->
-												</ul>
-											</li>
-											<li onclick="window.location.href=" https:="" debis.deu.edu.tr=""
-												php_library="" cikis.php";"=""><a
-													href="https://debis.deu.edu.tr/php_library/Cikis.php">ÇIKIS</a></li>
-										</ul>
-
-
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	{% include 'base.html' %}
 	<br>
 	<table cellspacing="0" cellpadding="0" width="85%" align="center" bgcolor="#ffffff">
 		<tbody>
