--- a/personal/templates/base.html
+++ b/personal/templates/base.html
@@ -9,40 +9,33 @@
                                 <td align="center">
                                     <ul id="nav" class="dropdown dropdown-linear" style="z-index:0;">
                                         <li style="background-color:#0066cc; cursor:auto;">&nbsp;</li>
-                                        <li onclick="window.location.href=" https:="" =""
-                                            debis.php";"="" class=""><a
+                                        <li onclick="window.location.href=" https:=""="" debis.php";"="" class=""><a
                                                 href="{% url 'personal:personal' %}">ANASAYFA</a></li>
-                                        <li class="dir" >KISISEL ISLEMLERIM
+                                        <li class="dir">KISISEL ISLEMLERIM
                                             <ul style="visibility: hidden;">
 
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" dersprogrami="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" dersprogrami="" index.php";"="" class=""><a
                                                         href="{% url 'personal:ders' %}">Ders
                                                         programım</a></li>
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" ogrencinotu="" index.php";"="" class=""><a
                                                         href="{% url 'personal:notgorme' %}">Not
                                                         görme ekranı</a></li>
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" ogrencinotu="" index.php";"="" class=""><a
                                                         href="{% url 'personal:notgorme' %}"><b>YDY</b>
                                                         Not görme ekranı</a></li>
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" ogrencinotu="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" ogrencinotu="" index.php";"="" class=""><a
                                                         href="{% url 'personal:devamsizlik' %}"><b>YDY</b>
                                                         Ögrenci Devamsızlık Bilgileri</a></li>
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" transcript="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" transcript="" index.php";"="" class=""><a
                                                         href="{% url 'personal:nott' %}">Not
                                                         döküm belgesi</a></li>
-                                                <li onclick="window.location.href=" https:="" =""
-                                                    ogrenciisleri="" ogrenci="" transcript="" index.php";"=""
-                                                    class=""><a
+                                                <li onclick="window.location.href=" https:=""="" ogrenciisleri=""
+                                                    ogrenci="" transcript="" index.php";"="" class=""><a
                                                         href="http://akillikart.deu.edu.tr/yurt/yurtBasvuru/index.php">Yurt
                                                         Basvurusu</a></li>
 
@@ -52,8 +45,8 @@
                                                         target="\&quot;_blank\&quot;">Mezun Bilgi Formu</a></li>
 
                                                 <li onclick="window.location.href=" https:=""
-                                                    debishs.deu.edu.tr="" "="" target=" \&quot;_blank\&quot;"
-                                                    class=""><a href="https://debishs.deu.edu.tr/"
+                                                    debishs.deu.edu.tr="" "="" target=" \&quot;_blank\&quot;" class="">
+                                                    <a href="https://debishs.deu.edu.tr/"
                                                         target="\&quot;_blank\&quot;">Sifre degistirme</a></li>
 
                                             </ul>
@@ -62,17 +55,16 @@
                                             <ul style="visibility: hidden;">
                                                 <li><a href="http://webmail.deu.edu.tr/ogrmail/src/login.php"
                                                         target="_blank">Klasik WebMail</a></li>
-                                                <li class=""><a href="https://webmail7.deu.edu.tr/"
-                                                        target="_blank">Yeni WebMail</a></li><a
-                                                    href="https://webmail7.deu.edu.tr/" target="_blank">
+                                                <li class=""><a href="https://webmail7.deu.edu.tr/" target="_blank">Yeni
+                                                        WebMail</a></li><a href="https://webmail7.deu.edu.tr/"
+                                                    target="_blank">
                                                 </a>
                                             </ul><a href="https://webmail7.deu.edu.tr/" target="_blank">
-                                            </a></li><a href="https://webmail7.deu.edu.tr/" target="_blank">
-
-                                        </a>
-                                        <li onclick="window.location.href=&#39;DEUWeb/mesaj/index.php&#39;;"><a
+                                            </a></li><a href="https://webmail7.deu.edu.tr/" target="_blank"> </a>
+                                       
+                                        <li onclick="window.location.href=" https:=""="" debis.php";"="" class=""><a
                                                 href="https://webmail7.deu.edu.tr/" target="_blank"></a><a
-                                                href="{% url 'personal:mesaj' %}">MESAJLAR</a>
+                                                href="{% url 'personal:mmesaj' %}">MESAJLAR</a>
                                         </li>
                                         <li><a href="{% url 'personal:anket' %}">ANKETLER</a>
                                         </li>
@@ -81,11 +73,11 @@
                                             <ul>
                                                 <li><a href="http://eduroam.deu.edu.tr/" target="_blank">Kablosuz ag
                                                         hizmetinden nasıl faydalanabilirim?</a></li>
-                                                <li><a href="http://web.deu.edu.tr/sss/posta.html"
-                                                        target="_blank">Dokuz Eylül Universitesi E-Posta kullanım
+                                                <li><a href="http://web.deu.edu.tr/sss/posta.html" target="_blank">Dokuz
+                                                        Eylül Universitesi E-Posta kullanım
                                                         kılavuzu</a></li>
-                                                <li><a href="http://web.deu.edu.tr/sss/spam.html"
-                                                        target="_blank">Spam posta nedir?</a></li>
+                                                <li><a href="http://web.deu.edu.tr/sss/spam.html" target="_blank">Spam
+                                                        posta nedir?</a></li>
                                                 <li><a href="http://web.deu.edu.tr/sss/proxy_ogrenci.html"
                                                         target="_blank">Kütüphane veritabanlarına erisim-proxy
                                                         ayarları nasıl yapılır? (Ögrenci için)</a></li>
@@ -95,8 +87,8 @@
                                                 <!--<li>Kayıp Parola islemleri</li>-->
                                             </ul>
                                         </li>
-                                        <li> 
-                                            <a href="{% url 'home:home' %}" >ÇIKIS</a>
+                                        <li>
+                                            <a href="{% url 'home:home' %}">ÇIKIS</a>
                                         </li>
                                     </ul>
 
