--- a/personal/templates/personal.html
+++ b/personal/templates/personal.html
@@ -90,10 +90,10 @@
 		}
 		-->
 	</style>
-	<link href="{% static 'css/dropdown.css' %}" media="all" rel="stylesheet"
-		type="text/css">
-	<link href="{% static 'css/default.css' %}" media="all" rel="stylesheet"
-		type="text/css">
+	<link href="{% static 'css/dropdown.css' %}" media="all" rel="stylesheet" type="text/css">
+		
+	<link href="{% static 'css/default.css' %}" media="all" rel="stylesheet" type="text/css">
+		
 	<script type="text/javascript" src="{% static 'js/jquery.js.download' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery.dropdown.js.download' %}"></script>
 	
