--- a/static/css/debis.css
+++ b/static/css/debis.css
@@ -1,124 +1,207 @@
 BODY {
 
-        FONT-SIZE: 8pt; FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
-
+	FONT-SIZE: 8pt;
+	FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
 }
 
 TABLE {
 
-        BORDER-RIGHT: 0px; PADDING-RIGHT: 0px; BORDER-TOP: 0px; PADDING-LEFT: 0px; FONT-SIZE: 8pt; PADDING-BOTTOM: 0px; MARGIN: 0px; BORDER-LEFT: 0px; PADDING-TOP: 0px; BORDER-BOTTOM: 0px; FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
-
+	BORDER-RIGHT: 0px;
+	PADDING-RIGHT: 0px;
+	BORDER-TOP: 0px;
+	PADDING-LEFT: 0px;
+	FONT-SIZE: 8pt;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	BORDER-LEFT: 0px;
+	PADDING-TOP: 0px;
+	BORDER-BOTTOM: 0px;
+	FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
 }
 
 TH {
 
-        BORDER-RIGHT: 0px; PADDING-RIGHT: 0px; BORDER-TOP: 0px; PADDING-LEFT: 0px; FONT-WEIGHT: bold; FONT-SIZE: 8pt; PADDING-BOTTOM: 0px; MARGIN: 0px; WORD-SPACING: 2pt; BORDER-LEFT: 0px; COLOR: #006cb9; TEXT-INDENT: 3pt; PADDING-TOP: 0px; BORDER-BOTTOM: 0px; FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif; WHITE-SPACE: nowrap; LETTER-SPACING: 1pt; HEIGHT: 21px; BACKGROUND-COLOR: #bfd1e9; TEXT-ALIGN: left
-
+	BORDER-RIGHT: 0px;
+	PADDING-RIGHT: 0px;
+	BORDER-TOP: 0px;
+	PADDING-LEFT: 0px;
+	FONT-WEIGHT: bold;
+	FONT-SIZE: 8pt;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	WORD-SPACING: 2pt;
+	BORDER-LEFT: 0px;
+	COLOR: #006cb9;
+	TEXT-INDENT: 3pt;
+	PADDING-TOP: 0px;
+	BORDER-BOTTOM: 0px;
+	FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif;
+	WHITE-SPACE: nowrap;
+	LETTER-SPACING: 1pt;
+	HEIGHT: 21px;
+	BACKGROUND-COLOR: #bfd1e9;
+	TEXT-ALIGN: left
 }
 
 TH.dark {
 
-        PADDING-RIGHT: 0px; PADDING-LEFT: 0px; FONT-WEIGHT: bolder; PADDING-BOTTOM: 0px; MARGIN: 0px; COLOR: #ffffff; TEXT-INDENT: 0pt; PADDING-TOP: 0px; HEIGHT: 18px; BACKGROUND-COLOR: #0066cc; TEXT-ALIGN: left
-
+	PADDING-RIGHT: 0px;
+	PADDING-LEFT: 0px;
+	FONT-WEIGHT: bolder;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	COLOR: #ffffff;
+	TEXT-INDENT: 0pt;
+	PADDING-TOP: 0px;
+	HEIGHT: 18px;
+	BACKGROUND-COLOR: #0066cc;
+	TEXT-ALIGN: left
 }
 
 TD {
 
-        PADDING-RIGHT: 5px; PADDING-LEFT: 5px; FONT-SIZE: 8pt; PADDING-BOTTOM: 5px; MARGIN: 5px; COLOR: #0066cc; PADDING-TOP: 5px; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+	PADDING-RIGHT: 5px;
+	PADDING-LEFT: 5px;
+	FONT-SIZE: 8pt;
+	PADDING-BOTTOM: 5px;
+	MARGIN: 5px;
+	COLOR: #0066cc;
+	PADDING-TOP: 5px;
+	FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
 
 }
 
 TD.button {
 
-        PADDING-RIGHT: 0px; PADDING-LEFT: 0px; FONT-WEIGHT: bolder; PADDING-BOTTOM: 0px; MARGIN: 0px; COLOR: #ffffff; PADDING-TOP: 0px; WHITE-SPACE: nowrap; BACKGROUND-COLOR: #000066
-
+	PADDING-RIGHT: 0px;
+	PADDING-LEFT: 0px;
+	FONT-WEIGHT: bolder;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	COLOR: #ffffff;
+	PADDING-TOP: 0px;
+	WHITE-SPACE: nowrap;
+	BACKGROUND-COLOR: #000066
 }
 
 TD.body {
 
-        PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; MARGIN: 0px; VERTICAL-ALIGN: top; PADDING-TOP: 0px; BACKGROUND-COLOR: #e6ecf2
-
+	PADDING-RIGHT: 0px;
+	PADDING-LEFT: 0px;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	VERTICAL-ALIGN: top;
+	PADDING-TOP: 0px;
+	BACKGROUND-COLOR: #e6ecf2
 }
 
 TD.split {
 
-        BACKGROUND-COLOR: #ffffff
-
+	BACKGROUND-COLOR: #ffffff
 }
 
 TD.header {
 
-        PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; MARGIN: 0px; PADDING-TOP: 0px;
+	PADDING-RIGHT: 0px;
+	PADDING-LEFT: 0px;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	PADDING-TOP: 0px;
 
 }
 
 A {
 
-        FONT-WEIGHT: lighter; FONT-SIZE: 8pt; COLOR: #006cb9; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; TEXT-DECORATION: underline
-
+	FONT-WEIGHT: lighter;
+	FONT-SIZE: 8pt;
+	COLOR: #006cb9;
+	FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+	TEXT-DECORATION: underline
 }
 
 A.darkbg {
 
-        COLOR: #ffffff
-
+	COLOR: #ffffff
 }
 
 INPUT {
 
-        FONT-WEIGHT: bold; FONT-SIZE: 8pt; COLOR: #000066; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; BACKGROUND-COLOR: #ffffff
-
+	FONT-WEIGHT: bold;
+	FONT-SIZE: 8pt;
+	COLOR: #000066;
+	FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+	BACKGROUND-COLOR: #ffffff
 }
 
 INPUT.bg {
 
-        BACKGROUND-COLOR: #e6ecf2
-
+	BACKGROUND-COLOR: #e6ecf2
 }
 
 SELECT {
 
-        FONT-WEIGHT: bold; FONT-SIZE: 8pt; COLOR: #000066; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; BACKGROUND-COLOR: #ffffff
-
+	FONT-WEIGHT: bold;
+	FONT-SIZE: 8pt;
+	COLOR: #000066;
+	FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+	BACKGROUND-COLOR: #ffffff
 }
 
 OPTION {
 
-        FONT-WEIGHT: bold; FONT-SIZE: 8pt; COLOR: #000066; FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; BACKGROUND-COLOR: #ffffff
-
+	FONT-WEIGHT: bold;
+	FONT-SIZE: 8pt;
+	COLOR: #000066;
+	FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+	BACKGROUND-COLOR: #ffffff
 }
 
 TABLE.border {
 
-        BORDER-RIGHT: #0066cc 1px solid; BORDER-TOP: #0066cc 1px solid; BORDER-LEFT: #0066cc 1px solid; BORDER-BOTTOM: #0066cc 1px solid
-
+	BORDER-RIGHT: #0066cc 1px solid;
+	BORDER-TOP: #0066cc 1px solid;
+	BORDER-LEFT: #0066cc 1px solid;
+	BORDER-BOTTOM: #0066cc 1px solid
 }
 
 HR {
 
-        COLOR: #000066
-
+	COLOR: #000066
 }
 
 TD.logo {
 
-        PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; MARGIN: 0px; PADDING-TOP: 0px; BACKGROUND-COLOR: #ffffff
-
+	PADDING-RIGHT: 0px;
+	PADDING-LEFT: 0px;
+	PADDING-BOTTOM: 0px;
+	MARGIN: 0px;
+	PADDING-TOP: 0px;
+	BACKGROUND-COLOR: #ffffff
 }
 
 TD.banner {
 
-        BORDER-RIGHT: 0px; BORDER-TOP: 0px; BORDER-LEFT: 0px; BORDER-BOTTOM: #bfd1e9 1px solid; BACKGROUND-COLOR: #e6ecf2
-
+	BORDER-RIGHT: 0px;
+	BORDER-TOP: 0px;
+	BORDER-LEFT: 0px;
+	BORDER-BOTTOM: #bfd1e9 1px solid;
+	BACKGROUND-COLOR: #e6ecf2
 }
+
 TD.forum {
 
-        BORDER-RIGHT: 0px; BORDER-TOP: 0px; BORDER-LEFT: 0px; BORDER-BOTTOM: #E5E5E5 1px solid; BACKGROUND-COLOR: #ffffff
-
+	BORDER-RIGHT: 0px;
+	BORDER-TOP: 0px;
+	BORDER-LEFT: 0px;
+	BORDER-BOTTOM: #E5E5E5 1px solid;
+	BACKGROUND-COLOR: #ffffff
 }
 
 .cskn {
-	FONT-SIZE: 7pt; COLOR: #000000;FONT-WEIGHT: normal;FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
+	FONT-SIZE: 7pt;
+	COLOR: #000000;
+	FONT-WEIGHT: normal;
+	FONT-FAMILY: Verdana, Geneva, Arial, helvetica, sans-serif
 }
 
 .alert {
@@ -154,4 +237,11 @@ TD.forum {
 	font-weight: normal;
 }
 
-.buton{font-family: Verdana; font-size: 8pt; background-color: #284B93; color: #FFFFFF; font-weight: bold; border:0px;}
+.buton {
+	font-family: Verdana;
+	font-size: 8pt;
+	background-color: #284B93;
+	color: #FFFFFF;
+	font-weight: bold;
+	border: 0px;
+}
