--- a/static/css/default.css
+++ b/static/css/default.css
@@ -32,42 +32,51 @@
 
 
 ul.dropdown {
- font-weight: bold;
+	font-weight: bold;
 
 }
 
-	ul.dropdown li {
-	 padding: 7px 10px;
-	 border-style: solid;
-	 border-width: 0 1px 1px 0;
-	 border-color: #FF0000 #ffffff #0066cc;
-	 background-color: #0066cc;
-	 color: #fff;
-	}
+ul.dropdown li {
+	padding: 7px 10px;
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: #FF0000 #ffffff #0066cc;
+	background-color: #0066cc;
+	color: #fff;
+}
 
-	ul.dropdown li.hover,
-	ul.dropdown li:hover {
-	 background-color:#0080ff;
-	 color: #fff;
-	 cursor:pointer;
-	}
+ul.dropdown li.hover,
+ul.dropdown li:hover {
+	background-color: #0080ff;
+	color: #fff;
+	cursor: pointer;
+}
 
-	ul.dropdown a:link,
-	ul.dropdown a:visited	{ color: #fff; text-decoration: none; }
-	ul.dropdown a:hover		{ color: yellow; }
-	ul.dropdown a:active	{ color: #fff; }
+ul.dropdown a:link,
+ul.dropdown a:visited {
+	color: #fff;
+	text-decoration: none;
+}
+
+ul.dropdown a:hover {
+	color: yellow;
+}
+
+ul.dropdown a:active {
+	color: #fff;
+}
 
 
-	/* -- level mark -- */
+/* -- level mark -- */
 
-	ul.dropdown ul {
-	 width: 200px;
-	 margin-top: 1px;
-	}
+ul.dropdown ul {
+	width: 200px;
+	margin-top: 1px;
+}
 
-		ul.dropdown ul li {
-		 font-weight: normal;
-		}
+ul.dropdown ul li {
+	font-weight: normal;
+}
 
 
 
@@ -78,34 +87,34 @@ ul.dropdown {
 
 
 ul.dropdown *.dir {
- padding-right: 20px;
- background-image: url(images/nav-arrow-down-white.png);
- background-position: 100% 50%;
- background-repeat: no-repeat;
+	padding-right: 20px;
+	background-image: url(images/nav-arrow-down-white.png);
+	background-position: 100% 50%;
+	background-repeat: no-repeat;
 }
 
 
 /* -- Components override -- */
 
 ul.dropdown-horizontal ul *.dir {
- padding-right: 15px;
- background-image: url(images/nav-arrow-right-white.png);
- background-position: 100% 50%;
- background-repeat: no-repeat;
+	padding-right: 15px;
+	background-image: url(images/nav-arrow-right-white.png);
+	background-position: 100% 50%;
+	background-repeat: no-repeat;
 }
 
 ul.dropdown-upward *.dir {
- background-image: url(images/nav-arrow-top-white.png);
+	background-image: url(images/nav-arrow-top-white.png);
 }
 
 ul.dropdown-vertical *.dir,
 ul.dropdown-upward ul *.dir {
- background-image: url(images/nav-arrow-right-white.png);
+	background-image: url(images/nav-arrow-right-white.png);
 }
 
 ul.dropdown-vertical-rtl *.dir {
- padding-right: 10px;
- padding-left: 15px;
- background-image: url(images/nav-arrow-left-white.png);
- background-position: 0 50%;
+	padding-right: 10px;
+	padding-left: 15px;
+	background-image: url(images/nav-arrow-left-white.png);
+	background-position: 0 50%;
 }
