--- a/static/css/gb_styles.css
+++ b/static/css/gb_styles.css
@@ -135,15 +135,24 @@
     padding-right: 20px;
 }
 
-.GB_Window .close { text-align: right; }
-.GB_Window .close span { 
-    font-size: 12px;
-    cursor: pointer; 
+.GB_Window .close {
+    text-align: right;
 }
+
+.GB_Window .close span {
+    font-size: 12px;
+    cursor: pointer;
+}
+
 .GB_Window .close img {
     cursor: pointer;
     padding: 0 3px 0 0;
 }
 
-.GB_Window .on { border-bottom: 1px solid #333; }
-.GB_Window .click { border-bottom: 1px solid red; }
+.GB_Window .on {
+    border-bottom: 1px solid #333;
+}
+
+.GB_Window .click {
+    border-bottom: 1px solid red;
+}
