--- a/personal/templates/not.html
+++ b/personal/templates/not.html
@@ -457,7 +457,7 @@
 							<tbody>
 								<tr>
 									<td style="text-align:center;padding:5px">
-										<a target="_blank" href="https://www.google.com/" style="font-size:1.3em;color:black;text-decoration:none;border:2px solid black;padding:5px;height:36px;width:200px">TRANSCRIPT GOSTER</a></td>
+										<a target="_blank" href="{% static 'doc/transcript.pdf' %}" style="font-size:1.3em;color:black;text-decoration:none;border:2px solid black;padding:5px;height:36px;width:200px">TRANSCRIPT GOSTER</a></td>
 								</tr>
 							</tbody>
 							
