--- a/personal/templates/katki.html
+++ b/personal/templates/katki.html
@@ -460,7 +460,7 @@
 											<tr>
 												<th width="15%"><b>SINIF</b></th>
 												<td width="5%"><b>:</b></td>
-												<td width="80%">1.Sinif</td>
+												<td width="80%">2.Sinif</td>
 											</tr>
 											<tr>
 												<th><b>DURUMU</b></th>
@@ -500,10 +500,16 @@
 												<th>KALAN</th>
 											</tr>
 											<tr>
-												<td> 1.ÖĞRETİM KATKI PAYI</td>
-												<td>2500.00 TL</td>
+												<td> 1.ÖĞRETİM GEÇMİŞ BORÇ</td>
+												<td>9600.00 TL</td>
 												<td>0.00 TL</td>
-												<td>2500.00 TL </td>
+												<td>9600.00 TL </td>
+											</tr>
+											<tr>
+												<td> 1.ÖĞRETİM KATKI PAYI</td>
+												<td>8750.00 TL</td>
+												<td>0.00 TL</td>
+												<td>8750.00 TL </td>
 											</tr>
 										</tbody>
 									</table>
@@ -512,7 +518,7 @@
 							</tr>
 							<tr>
 								<td colspan="2">
-									<font color="red"><b>2021-2022 Bahar donemi icin odenmesi gereken toplam : 2500.00
+									<font color="red"><b>2021-2022 Bahar donemi icin odenmesi gereken toplam : 18350
 											TL </b></font>
 								</td>
 							</tr>
