--- a/personal/templates/katki.html
+++ b/personal/templates/katki.html
@@ -491,7 +491,7 @@
 									<table width="100%" border="0" cellspacing="0" cellpadding="0">
 										<tbody>
 											<tr>
-												<td colspan="4"><b>2021-2022 Bahar Donemi Harc Bilgileri</b></td>
+												<td colspan="4"><b>2022-2023 Guz Donemi Harc Bilgileri</b></td>
 											</tr>
 											<tr>
 												<th>ACIKLAMA</th>
@@ -499,17 +499,17 @@
 												<th>FAIZI</th>
 												<th>KALAN</th>
 											</tr>
-											<tr>
+											<!-- <tr>
 												<td> 1.ÖĞRETİM GEÇMİŞ BORÇ</td>
 												<td>9600.00 TL</td>
 												<td>0.00 TL</td>
 												<td>9600.00 TL </td>
-											</tr>
+											</tr> -->
 											<tr>
 												<td> 1.ÖĞRETİM KATKI PAYI</td>
-												<td>8750.00 TL</td>
+												<td>9800.00 TL</td>
 												<td>0.00 TL</td>
-												<td>8750.00 TL </td>
+												<td>9800.00 TL </td>
 											</tr>
 										</tbody>
 									</table>
@@ -518,7 +518,7 @@
 							</tr>
 							<tr>
 								<td colspan="2">
-									<font color="red"><b>2021-2022 Bahar donemi icin odenmesi gereken toplam : 18350
+									<font color="red"><b>2022-2023 Guz donemi icin odenmesi gereken toplam : 9800
 											TL </b></font>
 								</td>
 							</tr>
