--- a/personal/templates/katki.html
+++ b/personal/templates/katki.html
@@ -497,7 +497,7 @@
               </tr> -->
               <tr>
                 <td> 1.ÖĞRETİM KATKI PAYI</td>
-                <td>50000.00 TL</td>
+                <td>70000.00 TL</td>
                 <td>0.00 TL</td>
                 <td>50000.00 TL</td>
               </tr>
@@ -508,7 +508,7 @@
         </tr>
         <tr>
           <td colspan="2">
-            <font color="red"><b>2025-2026 Guz donemi icin odenmesi gereken toplam : 50.000
+            <font color="red"><b>2025-2026 Bahar donemi icin odenmesi gereken toplam : 50.000
               TL </b></font>
           </td>
         </tr>
