--- a/personal/templates/katki.html
+++ b/personal/templates/katki.html
@@ -496,10 +496,10 @@
                 <td>9600.00 TL </td>
               </tr> -->
               <tr>
-                <td> 1.ÖĞRETİM KATKI PAYI</td>
-                <td>80000.00 TL</td>
+                <td>Mezuniyet / Diploma Ücreti</td>
+                <td>130000.00 TL</td>
                 <td>0.00 TL</td>
-                <td>80000.00 TL</td>
+                <td>130000.00 TL</td>
               </tr>
               </tbody>
             </table>
@@ -508,7 +508,7 @@
         </tr>
         <tr>
           <td colspan="2">
-            <font color="red"><b>2026-2027 Bahar donemi icin odenmesi gereken toplam : 80.000
+            <font color="red"><b>2026-2027 Bahar donemi icin odenmesi gereken toplam : 130.000
               TL </b></font>
           </td>
         </tr>
